@@ -697,12 +697,6 @@ namespace
     post (Type& t)
     {
       os << "protected:" << endl
-/*
-         << "CIAO_GLUE"
-         << regex::perl_s (t.scoped_name ().scope_name ().str (),
-                           "/::/_/")
-         << "::"
-*/
          << t.name () << "_Context *context_;" << endl
          << "};";
     }
